# mcp-stargazing

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  e2e_weather_test.py  inspect_tool.py  mcp-stargazing.code-workspace  pyproject.toml  requirements.txt  setup.py  supervisord.conf
.github/workflows/: ci.yml  release-docker.yml  release-pypi.yml
docs/: ROADMAP.md  analysis-area-semantics.md  bridge-boundary.md  composite-planning-mvp.md  weather-multi-provider-implementation-plan.md  workspace-review-2026-06-28.md  workspace-review-2026-06-30.md
examples/: _bootstrap.py  code_execution_orchestration.py  constellation_demo.py  light_pollution_demo.py  moon_phase_demo.py  nightly_forecast_demo.py  pagination_demo.py  perf_benchmark_shttp.py  postgis_config.toml  shttp_smoke_test.py  shttp_tools_demo.py  stream_http_analysis_area.py  visible_planets_demo.py
scripts/: build_constellation_centers.py  download_data.py
src/: README.md  __init__.py  cache.py  celestial.py  logging_config.py  main.py  paths.py  placefinder.py  qweather_interaction.py  response.py  retry.py  server_instance.py  utils.py
src/data/: constellation_centers.json  objects.json
src/functions/celestial/: impl.py
src/functions/metadata/: impl.py
src/functions/places/: impl.py
src/functions/planning/: impl.py
src/functions/telescope/: impl.py
src/functions/time/: impl.py
src/functions/weather/: common.py  geocoding.py  impl.py  models.py  service.py
src/functions/weather/providers/: _common.py  open_meteo.py  qweather.py  wttr.py
src/models/: __init__.py  base.py  celestial.py  error.py  pagination.py  places.py  planning.py  weather.py
src/schemas/: __init__.py  base.py  celestial.py  error.py  pagination.py  places.py  planning.py
tests/: conftest.py  test_cache.py  test_celestial.py  test_constellation.py  test_forecast.py  test_geocoding.py  test_integration.py  test_light_pollution.py  test_main_entry.py  test_main_registration.py  test_mcp_client.py  test_mcp_tools.py  test_moon.py  test_paths.py  test_placefinder.py  test_planets.py  test_pydantic_models.py  test_serialization.py  test_server_instance.py  test_structured_errors.py  test_supervisord_config.py  test_tool_metadata.py  test_utils.py  test_weather.py  test_weather_service.py
