[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-stargazing"
version = "0.5.1"
description = "An MCP server that provides real-time astronomical data, smart stargazing planning, and light pollution analysis for AI agents."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Henry Gong", email = "zhao.gong@outlook.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "fastmcp",
    "astropy[all]",
    "pytz",
    "numpy>=1.24,<2.4",
    "astroquery",
    "requests",
    "rasterio",
    "tzlocal",
    "geopy",
    "stargazing-place-finder>=0.6.6,<1",
    "structlog>=26.1.0",
]

[project.scripts]
mcp-stargazing = "src.main:main"

[project.urls]
Homepage = "https://github.com/StarGazer1995/mcp-stargazing"
Issues = "https://github.com/StarGazer1995/mcp-stargazing/issues"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["data/*.json"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
    "diff-cover>=10.3.0",
]

[tool.bandit]
targets = ["src/", "tests/"]
skips = ["B101"]
assert_used = false

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["N802", "N803", "N806"]
"examples/*" = ["E402", "E501", "F841", "E722", "N806"]
"scripts/*" = ["E402", "E501", "F841"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/__init__.py",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
